--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
-  text-align: center;
+.row {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.col {
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.icon-container {
+  padding: 14px;
+  color: rgba(255, 255, 255, 0.60);
+  transition: all ease .25s;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.icon-container:hover {
+  color: rgba(255, 255, 255, 0.90);
+}
+
+.menu {
+  background: #303952;
+  max-height: 47px;
+  flex: 1;
+}
+
+.editor {
+  flex:1;
+}
+
+.result {
+  flex:1;
+}
+
+.wrapper {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.content-editors {
+  flex: 2;
 }
