--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
   padding: 14px;
   color: rgba(255, 255, 255, 0.60);
   transition: all ease .25s;
+  cursor: pointer;
 }
 
 .icon-container:hover {
