--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+body, html, p {
+  margin: 0;
+	padding: 0;
+	border: 0;
+}
+
 .row {
   width: 100%;
   display: flex;
@@ -6,6 +12,10 @@
 
 .col {
   
+}
+
+.h100 {
+  height: 100%;
 }
 
 .icon-container {
