--- a/src/pages/Config/styles.css
+++ b/src/pages/Config/styles.css
@@ -1,28 +1,67 @@
 .config-wrapper {
     height: 100vh;
-    background: #303952;
 }
 
 .menu-settings {
     flex: 1;
-    width: 250px;
+    max-width: 250px;
     background: #282A36;
     height: 100%;
     padding: 24px;
 }
 
 .menu-settings .title {
-    color: rgba(255, 255, 255, 0.64);
+    color: rgba(255, 255, 255, 0.40);
     font-size: 18px;
     text-transform: uppercase;
 }
 
+.menu-settings li.active {
+    background: rgba(255,255,255,0.10);
+    border-radius: 6px;
+}
+
+.title-content {
+    display: flex;
+}
+
+.title-content .icon {
+    margin-right: 14px;
+    color: rgba(255, 255, 255, 0.40);
+    margin-top: 2px;
+    cursor: pointer;
+}
+
 .menu-settings ul {
     list-style-type: none;
+    margin: 12px 0;
+    padding: 0;
+}
+
+.menu-settings li {
+    padding: 14px;
+    color: rgba(255, 255, 255, 0.80);
+    cursor: pointer;
 }
 
 .content-settings {
     flex: 2;
     height: 100%;
     padding: 24px;
+    background: #303952;
+}
+
+p {
+    color: rgba(255, 255, 255, 0.80);
+}
+
+.input-txt {
+    padding: 8px;
+    border: 0;
+    outline: none;
+    margin-top: 8px;
+    border-radius: 6px;
+    color: #fff;
+    width: 100%;
+    background: rgba(255,255,255,0.1);
 }
