--- a/src/App.css
+++ b/src/App.css
@@ -52,3 +52,18 @@ body, html, p {
 .content-editors {
   flex: 2;
 }
+
+.end {
+  justify-content: flex-end;
+}
+
+.button-primary {
+  padding: 8px;
+  background: rgba(255,255,255,.10);
+  border: 0;
+  border-radius: 6px;
+  color: #fff;
+  font-weight: bold;
+  cursor: pointer;
+  outline: none;
+}
