--- a/src/App.css
+++ b/src/App.css
@@ -57,13 +57,10 @@ body, html, p {
   justify-content: flex-end;
 }
 
-.button-primary {
-  padding: 8px;
-  background: rgba(255,255,255,.10);
-  border: 0;
-  border-radius: 6px;
-  color: #fff;
-  font-weight: bold;
-  cursor: pointer;
-  outline: none;
+.mg-tp-8 {
+  margin-top: 8px;
+}
+
+.mg-rt-14 {
+  margin-right: 14px;
 }
